# systemd

./: .gitignore  .travis.yml  DISTRO_PORTING  Makefile-man.am  Makefile.am  NEWS  README  TODO  autogen.sh  configure.ac
man/: bootchart.conf.xml  bootup.xml  busctl.xml  crypttab.xml  custom-html.xsl  daemon.xml  file-hierarchy.xml  hostname.xml  hostnamectl.xml  journal-fields.xml  journalctl.xml  journald.conf.xml  journald.service.xml  kernel-command-line.xml  kernel-install.xml  localectl.xml  localtime.xml  loginctl.xml  machine-id.xml  machine-info.xml  machinectl.xml  os-release.xml  resolved.conf.xml  runlevel.xml  sd-daemon.xml  sd-id128.xml  sd-journal.xml  sd_bus_creds_get_pid.xml  sd_bus_creds_new_from_pid.xml  sd_bus_error.xml  sd_bus_message_append.xml  sd_bus_message_append_array.xml  sd_bus_message_append_basic.xml  sd_bus_message_append_string_memfd.xml  sd_bus_message_get_monotonic_usec.xml  sd_bus_negotiate_fds.xml  sd_bus_open_user.xml  sd_id128_randomize.xml  sd_journal_add_match.xml  sd_journal_get_data.xml  (+48 more)
po/: LINGUAS  POTFILES.in  POTFILES.skip  de.po  el.po  fr.po  it.po  pl.po  ru.po  uk.po
rules/: 99-systemd.rules.in
shell-completion/bash/: busctl  journalctl  loginctl  systemctl  systemd-analyze  systemd-run
shell-completion/zsh/: _journalctl  _loginctl  _systemctl  _systemd  _systemd-run
src/analyze/: analyze.c
src/ask-password/: ask-password.c
src/backlight/: backlight.c
src/binfmt/: binfmt.c
src/bootchart/: bootchart.c
src/cgls/: cgls.c
src/cgtop/: cgtop.c
src/compat-libs/: journal.pc.in  journal.sym  libsystemd-journal.sym
src/core/: build.h  cgroup.c  condition.c  dbus-execute.c  dbus-manager.c  dbus-service.c  dbus-unit.c  dbus.c  device.c  execute.c  execute.h  job.c  load-fragment-gperf.gperf.m4  load-fragment.c  load-fragment.h  locale-setup.c  machine-id-setup.c  macros.systemd.in  main.c  manager.c  manager.h  mount-setup.c  mount.c  namespace.c  org.freedesktop.systemd1.conf  service.c  service.h  shutdown.c  socket.c  socket.h  swap.c  systemd.pc.in  transaction.c  umount.c  unit-printf.c  unit.c  unit.h
src/delta/: delta.c
src/detect-virt/: detect-virt.c
src/fsck/: fsck.c
src/initctl/: initctl.c
src/journal/: catalog.c  coredump.c  coredumpctl.c  journal-def.h  journal-file.c  journal-file.h  journal-gatewayd.c  journal-vacuum.c  journal-verify.c  journal-verify.h  journalctl.c  journald-gperf.gperf  journald-kmsg.c  journald-server.c  journald-server.h  journald-wall.c  journald.c  journald.conf  sd-journal.c  test-catalog.c  test-journal-flush.c  test-journal-init.c  test-journal-interleaving.c  test-journal-match.c  test-journal-send.c  test-journal-stream.c  test-journal-verify.c  test-journal.c
src/libsystemd/: libsystemd.sym.m4
src/libsystemd/sd-bus/: DIFFERENCES  bus-control.c  bus-control.h  bus-convenience.c  bus-dump.c  bus-error.c  bus-internal.h  bus-kernel.c  bus-kernel.h  bus-message.c  bus-message.h  bus-objects.c  bus-socket.c  bus-util.c  bus-util.h  busctl.c  kdbus.h  sd-bus.c  test-bus-error.c  test-bus-gvariant.c  test-bus-marshal.c
src/libsystemd/sd-event/: sd-event.c
src/libsystemd/sd-login/: sd-login.c
src/libsystemd/sd-rtnl/: test-rtnl.c
src/locale/: localed.c
src/login/: 70-uaccess.rules  73-seat-late.rules.in  inhibit.c  loginctl.c  logind-action.c  logind-button.c  logind-core.c  logind-dbus.c  logind-seat-dbus.c  logind-seat.c  logind-seat.h  logind-session-dbus.c  logind-session-device.c  logind-session.c  logind-session.h  logind-user-dbus.c  logind.c  logind.h  org.freedesktop.login1.conf
src/machine-id-setup/: machine-id-setup-main.c
src/modules-load/: modules-load.c
src/network/: networkd-tunnel.c  networkd.h
src/notify/: notify.c
src/python-systemd/: _reader.c  journal.py
src/quotacheck/: quotacheck.c
src/readahead/: readahead-collect.c  readahead-common.c  readahead.c
src/resolve/: resolved-manager.c
src/rfkill/: rfkill.c
src/run/: run.c
src/shared/: MurmurHash2.c  async.c  bus-errors.h  capability.c  cgroup-show.h  clean-ipc.c  clock-util.c  condition-util.c  condition-util.h  conf-parser.c  copy.c  errno-list.c  fileio-label.c  fileio.c  install.c  label.c  label.h  log.c  logs-show.c  macro.h  missing.h  output-mode.h  path-lookup.c  path-lookup.h  siphash24.c  sleep-config.c  socket-util.c  special.h  strbuf.c  strv.c  strv.h  time-dst.c  time-util.c  time-util.h  udev-util.h  unit-name.c  unit-name.h  util.c  util.h  utmp-wtmp.c  (+1 more)
src/sleep/: sleep.c
src/systemctl/: systemctl.c
src/systemd/: sd-bus.h  sd-event.h  sd-journal.h  sd-messages.h
src/test/: test-cgroup-util.c  test-condition-util.c  test-ellipsize.c  test-env-replace.c  test-namespace.c  test-path-util.c  test-socket-util.c  test-strbuf.c  test-strip-tab-ansi.c  test-strv.c  test-tables.c  test-tmpfiles.c  test-unit-file.c  test-unit-name.c  test-utf8.c  test-util.c
src/tmpfiles/: tmpfiles.c
src/update-utmp/: update-utmp.c
src/vconsole/: vconsole-setup.c
tmpfiles.d/: systemd.conf
tools/: make-directive-index.py
units/: console-shell.service.m4.in  container-getty@.service.m4.in  emergency.service.in  hostname.service  initrd-cleanup.service.in  initrd-fs.target  initrd-switch-root.target  initrd-udevadm-cleanup-db.service.in  initrd.target  journald.service.in  journald.socket  sysctl.service.in  systemd-ask-password-wall.path  systemd-ask-password-wall.service.in  systemd-fsck-root.service.in  systemd-fsck@.service.in  systemd-journal-flush.service.in  systemd-journald.service.in  systemd-networkd.service.in  systemd-readahead-drop.service  systemd-resolved.service.in  systemd-tmpfiles-setup-dev.service.in  systemd-tmpfiles-setup.service.in  systemd-update-utmp-runlevel.service.in  systemd-vconsole-setup.service.in
